hdparm-9.4
	- nuked --fwdownload80 in favour of model-specific workarounds
	- use mlock() instead of MAP_POPULATE in fwdownload.c
	- issue SET_STREAMING command as part of -E (for newer CD/DVD drives)
		courtesy of Thomas Orgis <thomas@orgis.org>
		and Thomas Fritzsche" <tf@noto.de>.
hdparm-9.3
	- new --idle-immediate and --idle-unload commands
hdparm-9.2
	- fix WWN output from -I
hdparm-9.1
	- tidy up output from --dco-identify, add more info to manpage
	- add kernel (device driver) bug detection/warning to -N output
hdparm-9.0
	- update debian directory contents
	- add --dco-freeze, --dco-identify, --dco-restore flags
	- fix sgio.c to be more clever around the lba28 boundary
	- add supposedly obsolete "cache/buffer size" reporting to -I
	- new --fwdownload flag
	- fix error reporting from sg16().
	- dump entire returned sense desc[] in sgio.c with --verbose
hdparm-8.9
	- support /sys/block symlinks (some kernels seem to have those).
hdparm-8.8
	- fix -r, -a so that they display their values again (duh).
	- define BLKGETSIZE64 locally to avoid broken system headers that use u64 with it.
	- update man page to indicate that --security-* flags must be standalone
	- fix -Q to permit querying queue_depth (was broken in v8.7).
hdparm-8.7
	- fixes to permit building against older kernels which lack SG_IO
	- added build script for empeg systems
	- removed -R, -U flags: kernel support is broken and being removed
	- fixed IO_support output
	- prevent error messages from default flags
	- added sysfs.c, geom.c, fibmap.c
	- use sysfs for device start_lba/nsectors values whereever possible (for >= 2TB drives)
	- new standalone --fibmap and --fibmap-sector flags
	- converted -Q to access the queue_depth attribute from sysfs (now works for SATA!)
	- fixed readonly issue with optical drives that some people noticed
hdparm-8.6
	- add partition safeguards to r/w sector and make_bad_sector
hdparm-8.5
	- fix u8->u16 bug in security commands for all of 8.x series, Christian Franke